--- a/templates/partials/playlists_form.html
+++ b/templates/partials/playlists_form.html
@@ -24,5 +24,5 @@
     
     <!-- BUTTON -->
     <p>
-        <button type='submit'>Save Playlist</button>
+        <button type='submit'>Save</button>
     </p>
