--- a/templates/playlists_show.html
+++ b/templates/playlists_show.html
@@ -18,6 +18,8 @@
     <input type="submit" value="Delete">
 </form>
 
+<!-- Comment form -->
+{% include 'partials/comment_form.html' %}
 
     
 {% endblock %}
