--- a/templates/partials/comment_form.html
+++ b/templates/partials/comment_form.html
@@ -1,6 +1,8 @@
 <!-- templates/partials/comment_form.html -->
 
-<form>
+
+<form action='/playlists/comments' method='POST'>
+    <input type='hidden' value='{{ playlist._id }}' name='playlist_id'/>
         <fieldset>
             <legend>Add a Comment</legend>
             <!-- TITLE -->
@@ -19,7 +21,7 @@
                 <textarea class='form-control'
                     id='comment-content'
                     name='content'
-                    rows='10'
+                    rows='3'
                     placeholder='Your comment...'></textarea>
             </div>
         </fieldset>
