--- a/templates/partials/comment.html
+++ b/templates/partials/comment.html
@@ -6,5 +6,8 @@
     <div class='card-block'>
         <h4 class='card-title'>{{ comment.title }}</h4>
         <p class='card-text'>{{ comment.content }}</p>
+        <p><form action='/playlists/comments/{{ comment._id }}' method='POST'>
+            <input type="submit" value="Delete">
+        </form></p>
     </div>
 </div>
